--- a/lexer/demo/build.xml
+++ b/lexer/demo/build.xml
@@ -12,22 +12,20 @@ Code is Sun Microsystems, Inc. Portions Copyright 1997-2002 Sun
 Microsystems, Inc. All Rights Reserved.
 -->
 
-<project name="lexer" default="help" basedir=".">
+<project name="lexer-gen" default="compile-src" basedir=".">
 
   <property name="lexer.module.root" location=".."/>
   <property name="lexerjar" location="${lexer.module.root}/netbeans/modules/lexer.jar"/>
+  <property name="src.demo" location="src/org/netbeans/modules/lexer/demo"/>
   <!-- <property name="build.compiler.debug" value="on"/> -->
   <!-- <property name="build.compiler.deprecation" value="on"/> -->
 
-  <property name="javaccdemoclass" value="org.netbeans.modules.lexer.demo.javacc.CalcPaneDemo"/>
-  <property name="javacctestclass" value="org.netbeans.modules.lexer.demo.javacc.CalcAlgorithmTest"/>
-  <property name="antlrdemoclass" value="org.netbeans.modules.lexer.demo.antlr.CalcPaneDemo"/>
-  <property name="antlrtestclass" value="org.netbeans.modules.lexer.demo.antlr.CalcAlgorithmTest"/>
-
-  <target name="compile">
-    <!-- build complete lexer.jar -->
+  <target name="compile-base">
     <ant dir="${lexer.module.root}" target="netbeans" inheritAll="false"/>
+    <ant dir="${lexer.module.root}/gen" target="compile" inheritAll="false"/>
+  </target>
                
+  <target name="compile-src" depends="compile-base">
     <javac srcdir="src" destdir="src"
            deprecation="${build.compiler.deprecation}"
            debug="${build.compiler.debug}">
@@ -41,91 +39,77 @@ Microsystems, Inc. All Rights Reserved.
     </javac>
   </target>
 
-  <target name="javacc" depends="compile">
-    <java classname="${javaccdemoclass}" fork="true">
-      <classpath>
-        <pathelement location="${lexerjar}"/>
-        <pathelement location="src"/>
-      </classpath>
-    </java>
+  <target name="lexer-type-check" unless="lexer.type">
+    <fail message="Use -Dlexer.type=antlr to specify 'antlr' lexer type or 'javacc', 'handcoded/plain' or 'handcoded/link'."/>
   </target>
 
-  <target name="javacctest" depends="compile">
-    <java classname="${javacctestclass}" fork="true">
-      <classpath>
-        <pathelement location="${lexerjar}"/>
-        <pathelement location="src"/>
-      </classpath>
-    </java>
+  <target name="compile" depends="lexer-type-check" description="Generate/compile lexer sources">
+    <ant dir="${src.demo}/${lexer.type}" target="compile" inheritAll="false"/>
   </target>
 
-  <target name="antlr" depends="compile">
-    <java classname="${antlrdemoclass}" fork="true">
-      <classpath>
-        <pathelement location="${lexerjar}"/>
-        <pathelement location="src"/>
-        <fileset refid="antlr.runtime"/>
-      </classpath>
-    </java>
+  <target name="demo" depends="lexer-type-check" description="Run editor pane demo">
+    <ant dir="${src.demo}/${lexer.type}" target="demo" inheritAll="false"/>
   </target>
 
-  <target name="antlrtest" depends="compile">
-    <java classname="${antlrtestclass}" fork="true">
-      <classpath>
-        <pathelement location="${lexerjar}"/>
-        <pathelement location="src"/>
-        <fileset refid="antlr.runtime"/>
-      </classpath>
-    </java>
+  <target name="test" depends="lexer-type-check" description="Run random test to verify lexer correctness">
+    <ant dir="${src.demo}/${lexer.type}" target="test" inheritAll="false"/>
   </target>
 
-  <target name="clean">
-    <delete>
+  <target name="clean" depends="lexer-type-check" description="Clean class files and generated sources">
+    <ant dir="${src.demo}/${lexer.type}" target="clean" inheritAll="false"/>
+  </target>
+
+  <target name="rebuild" depends="lexer-type-check" description="Clean then Compile">
+    <ant dir="${src.demo}/${lexer.type}" target="rebuild" inheritAll="false"/>
+  </target>
+
+  <target name="compile-all" depends="compile-base">
+    <!-- compile all known lexers -->
+    <ant dir="${src.demo}/antlr" target="compile" inheritAll="false"/>
+    <ant dir="${src.demo}/javacc" target="compile" inheritAll="false"/>
+    <ant dir="${src.demo}/handcoded/plain" target="compile" inheritAll="false"/>
+    <ant dir="${src.demo}/handcoded/link" target="compile" inheritAll="false"/>
+
+    <antcall target="compile-src"/>
+  </target>
+
+  <target name="clean-base">
+    <ant dir="${lexer.module.root}" target="clean" inheritAll="false"/>
+    <ant dir="${lexer.module.root}/gen" target="clean" inheritAll="false"/>
+  </target>
+
+  <target name="clean-src">
+    <delete quiet="true">
       <fileset dir="src">
         <include name="**/*.class"/>
       </fileset>
     </delete>
   </target>
 
-  <target name="genall">
-    <ant dir="${lexer.module.root}/demo/src/org/netbeans/modules/lexer/demo/antlr" antfile="calcBuild.xml" inheritAll="false"/>
-    <ant dir="${lexer.module.root}/demo/src/org/netbeans/modules/lexer/demo/javacc" antfile="calcBuild.xml" inheritAll="false"/>
-    <ant dir="${lexer.module.root}/editorbridge/calc/src/org/netbeans/modules/lexer/editorbridge/calc/lang/" antfile="calcBuild.xml" inheritAll="false"/>
+  <target name="clean-all" depends="clean-base, clean-src">
+    <!-- clean all known lexers -->
+    <ant dir="${src.demo}/antlr" target="clean" inheritAll="false"/>
+    <ant dir="${src.demo}/javacc" target="clean" inheritAll="false"/>
+    <ant dir="${src.demo}/handcoded/plain" target="clean" inheritAll="false"/>
+    <ant dir="${src.demo}/handcoded/link" target="clean" inheritAll="false"/>
   </target>
 
-  <target name="buildall" depends="compile">
-    <ant dir="${lexer.module.root}/editorbridge/calc" target="netbeans" inheritAll="false"/>
+  <target name="rebuild-all" depends="clean-all, compile-all">
   </target>
-
-  <target name="cleanall" depends="clean">
-    <ant dir="${lexer.module.root}" target="clean" inheritAll="false"/>
-    <ant dir="${lexer.module.root}/editorbridge" target="clean" inheritAll="false"/>
-    <ant dir="${lexer.module.root}/editorbridge/calc" target="clean" inheritAll="false"/>
-  </target>
-
-  <!-- helper task to create zip file of the whole lexer module -->
-  <target name="zip" depends="cleanall">
-    <zip zipfile="${lexer.module.root}/../lexer.zip"
-         basedir="${lexer.module.root}/.."
-         compress="true"
-         includes="lexer/**"
-         excludes="lexer/**/*~, lexer/**/.#*"
-         update="false"
-    />
-  </target>
-
+  
   <target name="help">
-    <echo message="Targets:"/>
-    <echo message="javacc      Run javacc-based editor pane demo (Requires JDK1.4)"/>
-    <echo message="javacctest  Run javacc-based test that checks generated lexer correctness (Requires JDK1.4)"/>
-    <echo message="antlr       Run antlr-based editor pane demo (Requires JDK1.4)"/>
-    <echo message="antlrtest   Run antlr-based test that checks generated lexer correctness (Requires JDK1.4)"/>
-    <echo message="compile     Compile the demo sources"/>
-    <echo message="clean       Clean the *.class files under src subdir"/>
-    <echo message="genall      Regenerate all the lexer sources from the grammarss in the lexer module."/>
-    <echo message="            It requires to have JavaCC.zip under external subdirectory."/>
-    <echo message="buildall    Build everything in the lexer module"/>
-    <echo message="cleanall    Clean everything in the lexer module"/>
+    <echo message="Targets that require lexer type such as -Dlexer.type=antlr for 'antlr' lexer type"/>
+    <echo message="    or 'javacc', 'handcoded/plain' or 'handcoded/link':"/>
+    <echo message="compile     Generate demo language sources and compile them (Requires JDK1.4)"/>
+    <echo message="demo        Run demo editor pane (Requires JDK1.4)"/>
+    <echo message="test        Run random test that checks generated lexer correctness (Requires JDK1.4)"/>
+    <echo message="clean       Clean generated language sources and class files"/>
+    <echo message="rebuild     Clean then Compile"/>
+    <echo message=""/>
+    <echo message="Global targets:"/>
+    <echo message="compile-all Generate all demo languages and compile all demo sources"/>
+    <echo message="clean-all   Clean all demo language sources and classes"/>
+    <echo message="rebuild-all Run clean-all followed by compile-all targets"/>
   </target>
 
 </project>
