--- a/lexer/demo/src/org/netbeans/modules/lexer/demo/javacc/build.xml
+++ b/lexer/demo/src/org/netbeans/modules/lexer/demo/javacc/build.xml
@@ -39,19 +39,24 @@ Microsystems, Inc. All Rights Reserved.
     <property name="lang.description.xml.ignore" value="true"/>
     -->
 
-    <target name="compile">
+    <target name="check-lexer-gen">
+        <!-- Check lexer/gen package readiness and compile if necessary -->
+        <ant dir="${lexer.module.root}/gen" target="compile"/>
+    </target>
+
+    <target name="compile" depends="check-lexer-gen">
         <ant antfile="${javacc.support.antfile}" target="compile"/>
     </target>
 
-    <target name="demo">
+    <target name="demo" depends="check-lexer-gen">
         <ant antfile="${javacc.support.antfile}" target="demo"/>
     </target>
 
-    <target name="test">
+    <target name="test" depends="check-lexer-gen">
         <ant antfile="${javacc.support.antfile}" target="test"/>
     </target>
 
-    <target name="generate-language-description">
+    <target name="generate-language-description" depends="check-lexer-gen">
         <ant antfile="${javacc.support.antfile}" target="generate-language-description"/>
     </target>
 
