IN=13466 Add MFolderNode, InputLines and ManagementAction

--- a/j2eeserver/src/org/netbeans/modules/j2ee/deployment/impl/ui/Bundle.properties
+++ b/j2eeserver/src/org/netbeans/modules/j2ee/deployment/impl/ui/Bundle.properties
@@ -114,3 +114,8 @@ LBL_Command_Begins="{0}" begins...
 LBL_Close_When_Finished=Automatically close this window when finished.
 
 LBL_Close_When_Finished_Mnemonic=A
+
+
+LBL_Resources=Resources
+
+LBL_DeployedObjects=Deployed Objects
