--- a/j2eeserver/src/org/netbeans/modules/j2ee/deployment/impl/ui/actions/Bundle.properties
+++ b/j2eeserver/src/org/netbeans/modules/j2ee/deployment/impl/ui/actions/Bundle.properties
@@ -35,3 +35,5 @@ MSG_Server_Instance_Added=Server instance "{0}" was added successfully.
 MSG_Default_Targets_Set=Default target(s) set:  {0} - {1}
 
 LBL_Add_Server_Instance=Add new server instance using Url...
+
+MSG_InvalidEntry=Invalid input values:
