core.jar should declare its dep on openide-loaders.jar.

--- a/openide/test/build.xml
+++ b/openide/test/build.xml
@@ -8,7 +8,7 @@ compliance with the License. A copy of the License is available at
 http://www.sun.com/
 
 The Original Code is NetBeans. The Initial Developer of the Original
-Code is Sun Microsystems, Inc. Portions Copyright 1997-2002 Sun
+Code is Sun Microsystems, Inc. Portions Copyright 1997-2003 Sun
 Microsystems, Inc. All Rights Reserved.
 -->
 
@@ -363,6 +363,7 @@ Microsystems, Inc. All Rights Reserved.
             		<include name="core-windows.jar"/>
                 </fileset>             
                 <pathelement location="../netbeans/lib/openide.jar"/> <!-- for the manifest -->
+                <pathelement location="../loaders/netbeans/lib/openide-loaders.jar"/> <!-- for the manifest -->
 
        	</path>
     </target>
