openide-loaders.jar was missing nice display name stuff.

--- a/openide.loaders/src/org/openide/loaders/Bundle.properties
+++ b/openide.loaders/src/org/openide/loaders/Bundle.properties
@@ -9,6 +9,14 @@
 # Code is Sun Microsystems, Inc. Portions Copyright 1997-2003 Sun
 # Microsystems, Inc. All Rights Reserved.
 
+OpenIDE-Module-Name=Datasystems API
+OpenIDE-Module-Short-Description=NetBeans Open API for manipulating data objects.
+OpenIDE-Module-Long-Description=\
+    The Datasystems API is a layer atop the Filesystems API which recognizes \
+    and groups data objects and gives them particular semantics. Once a part \
+    of the general Open APIs, it is now split into an independent module.
+OpenIDE-Module-Display-Category=Infrastructure
+
 #DefaultDataObject
 HINT_DefaultDataObject=Unrecognized File
 
