Start server progress implementation

--- a/tomcat5/src/org/netbeans/modules/tomcat5/ide/Bundle.properties
+++ b/tomcat5/src/org/netbeans/modules/tomcat5/ide/Bundle.properties
@@ -13,3 +13,5 @@
 
 # StartTomcat
 MSG_TomcatExecutionCommand=Tomcat Execution Process
+MSG_createBaseDir=Creating configuration files and directories...
+MSG_startProcess=Starting Tomcat process...
