XTest no longer requires xerces, any JAXP compliant parser is enough.

--- a/xtest/build.xml
+++ b/xtest/build.xml
@@ -62,8 +62,10 @@ Microsystems, Inc. All Rights Reserved.
         <!-- use junit with already compiled extensions -->        
 	<pathelement location="src"/>
         <fileset dir="external">
+        <!--
           <include name="xml-apis*.jar"/>          
           <include name="xerces*.jar"/>
+         -->
           <include name="ant-1.*.jar"/>
           <include name="junit*.jar"/>
         </fileset>
@@ -134,8 +136,10 @@ Microsystems, Inc. All Rights Reserved.
     </jar>	        
   
     <copy file="external/junit-3.8.1.jar" tofile="lib/junit.jar"/>
+    <!--
     <copy file="external/xml-apis-1.0b2.jar" tofile="lib/xml-apis.jar"/>
     <copy file="external/xerces-2.0.1.jar" tofile="lib/xerces.jar"/>
+    -->
   </target>
   
   <target name="makedist" depends="compile-dependend-modules,jars">
@@ -167,6 +171,7 @@ Microsystems, Inc. All Rights Reserved.
     <delete dir="lib/patches"/>
     <delete file="lib/xtest.jar"/>    
     <delete file="lib/junit.jar"/>
+    <delete file="lib/xalan.jar"/>
     <delete file="lib/xerces.jar"/>
     <delete file="lib/xml-apis.jar"/>
     <delete file="lib/xtest-junit-testrunner.jar"/>
@@ -204,8 +209,10 @@ Microsystems, Inc. All Rights Reserved.
       <classpath>		
         <pathelement location="src"/>
         <fileset dir="external">
+        <!--
           <include name="xml-apis*.jar"/>
           <include name="xerces*.jar"/>
+          -->
           <include name="ant-1.*.jar"/>
         </fileset>
       </classpath>
@@ -222,8 +229,10 @@ Microsystems, Inc. All Rights Reserved.
             excludesfile="../nbbuild/standard-jar-excludes.txt"
             compress="false"
             includes="org/netbeans/xtest/pe/**,org/netbeans/xtest/util/**,org/netbeans/xtest/xmlserializer/**,org/netbeans/xtest/NestedException.class"/>            
+    <!--            
     <copy file="external/xml-apis-1.0b2.jar" tofile="lib/xml-apis.jar"/>
     <copy file="external/xerces-2.0.1.jar" tofile="lib/xerces.jar"/>
+    -->
   </target>
   
   <target name="makedist-pes" depends="jar-pes">
