--- a/openide/build.xml
+++ b/openide/build.xml
@@ -642,6 +642,8 @@ To force them to be rebuilt, run again with -Dopen-apis-force-rebuild=true
     <xmlvalidate file="api/doc/changes/apichanges.xml" failonerror="true"/>
     <style in="api/doc/changes/apichanges.xml" out="javadoc/OpenAPIs/apichanges.html" style="../nbbuild/javadoctools/apichanges.xsl"/>
     <mkdir dir="javadoc/OpenAPIs/arch"/>
+    <!-- Warn about incorrect question version, but do not make build fail: -->
+    <property name="arch.warn" value="true"/>
     <arch answers="arch/arch-openide-modules.xml" output="javadoc/OpenAPIs/arch/openide-modules.html" stylesheet="../prose.css" overviewlink="../overview-summary.html" footer="@FOOTER@"/>
     <arch answers="arch/arch-openide-dialogs.xml" output="javadoc/OpenAPIs/arch/openide-dialogs.html" stylesheet="../prose.css" overviewlink="../overview-summary.html" footer="@FOOTER@"/>
     <arch answers="arch/arch-openide-lookup.xml" output="javadoc/OpenAPIs/arch/openide-lookup.html" stylesheet="../prose.css" overviewlink="../overview-summary.html" footer="@FOOTER@"/>
