--- a/lexer/build.xml
+++ b/lexer/build.xml
@@ -19,6 +19,7 @@ Microsystems, Inc. All Rights Reserved.
   <property name="dist.base" value="www.netbeans.org/download/nbms/40"/>
   <property name="license.file" location="../nbbuild/standard-nbm-license.txt"/>
   <property name="nbroot" location=".."/>
+  <property name="lexerroot" location="${nbroot}/lexer"/>
   <!-- <property name="build.compiler.debug" value="on"/> -->
   <!-- <property name="build.compiler.deprecation" value="on"/> -->
 
@@ -26,6 +27,14 @@ Microsystems, Inc. All Rights Reserved.
   <taskdef name="genlist" classname="org.netbeans.nbbuild.MakeListOfNBM" classpath="../nbbuild/nbantext.jar"/>
   <taskdef name="tojar" classname="org.netbeans.nbbuild.ToJar" classpath="../nbbuild/nbantext.jar"/>
   <taskdef name="locjar" classname="org.netbeans.nbbuild.LocalizedJar" classpath="../nbbuild/nbantext.jar"/>
+
+  <!-- Classpath used for compilation and javadoc -->
+  <path id="cp">
+    <fileset dir="${lexerroot}/external">
+      <include name="antlr*.jar"/>
+    </fileset>
+    <pathelement location="${lexerroot}/src"/>
+  </path>
 
   <target name="init">
     <ant dir="external" target="unscramble"/>
@@ -35,14 +44,7 @@ Microsystems, Inc. All Rights Reserved.
     <javac srcdir="src" destdir="src"
            deprecation="${build.compiler.deprecation}"
            debug="${build.compiler.debug}">
-      <classpath>
-        <fileset dir="../core/external">
-          <include name="xml-apis*.jar"/>
-        </fileset>
-        <fileset dir="external">
-          <include name="antlr*.jar"/>
-        </fileset>
-      </classpath>
+      <classpath refid="cp"/>
     </javac>
   </target>
 
@@ -75,10 +77,24 @@ Microsystems, Inc. All Rights Reserved.
     </makenbm>
   </target>
 
+  <target name="javadoc" description="Build Javadoc.">
+      <!-- Ant 1.4 bug workaround: <property refid="..."/> does not work inside <ant> -->
+      <property name="_cp" refid="cp"/>
+      <ant dir="${nbroot}/nbbuild/javadoctools" antfile="template.xml" target="javadoc">
+          <property name="javadoc.base" location="."/>
+          <property name="javadoc.name" value="LexerAPI"/>
+          <property name="javadoc.title" value="Lexer API"/>
+          <property name="javadoc.packages" value="org.netbeans.api.lexer,org.netbeans.spi.lexer"/>
+          <property name="javadoc.classpath" value="${_cp}"/>
+          <property name="javadoc.main.page" value="org/netbeans/api/lexer/doc-files/api.html"/>
+<!--          <property name="javadoc.arch" location="../arch/arch-openide-datasystems.xml"/> -->
+          <property name="javadoc.docfiles" location="api/doc"/>
+          <property name="javadoc.apichanges" location="api/apichanges.xml"/>
+      </ant>
+  </target>
+  
   <target name="clean">
     <delete dir="javadoc"/>
-    <delete dir="LexerAPIs"/>
-    <delete file="LexerAPIs.zip"/>
     <delete>
       <fileset dir="src">
         <include name="**/*.class"/>
@@ -90,70 +106,10 @@ Microsystems, Inc. All Rights Reserved.
     <delete dir="Info"/>
   </target>
 
-  <!-- api changes documentation -->
+  <!-- api changes check -->
   <target name="apichanges-check" description="Check syntax of API changes list. Requires Ant 1.4!">
-      <xmlvalidate file="api/doc/changes/apichanges.xml" failonerror="true"/>
+      <xmlvalidate file="api/apichanges.xml" failonerror="true"/>
   </target>
-
-  <target name="apichanges-generate" description="Regenerate HTML from XML API changes list.">
-      <!-- Ant 1.3 and 1.4 disagree on style attribute. -->
-      <!-- 1.3: treated as a name relative to XML file. -->
-      <!-- 1.4: treated as a filename consistent with normal Ant usage. -->
-      <!-- Be safe and give the absolute path here. -->
-      <style in="api/doc/changes/apichanges.xml"
-             out="www/apichanges.html"
-             destdir="www"
-             style="${basedir}/../../openide/api/doc/changes/apichanges.xsl"
-      />
- 
-  </target>
-
-  <target name="javadoc" depends="lexer-apis">
-    <copy todir="javadoc">
-      <fileset dir=".">
-        <include name="LexerAPIs/**"/>
-        <include name="LexerAPIs.zip"/>
-      </fileset>
-    </copy>
-  </target>
-
-  <!-- Lexer API documentation -->
-  <target name="lexer-apis" description="Create Lexer API documentation.">
-    <property name="jdk-docs-location" value="http://java.sun.com/j2se/1.3/docs/api"/>
-    <property name="openide-docs-location" value="http://www.netbeans.org/download/apis/"/>
-    <property name="openide.package-list.loc" location="${nbroot}/openide/OpenAPIs"/>
-    <echo message="Build Lexer API documentation..."/>
-    <delete dir="LexerAPIs"/>
-    <mkdir dir="LexerAPIs"/>
-    <javadoc destdir="LexerAPIs"
-             packagenames="org.netbeans.api.*,org.netbeans.spi.*"
-             doctitle="NetBeans Lexer APIs"
-             use="true"
-             splitindex="true"
-             author="false"
-             version="false"
-             maxmemory="64m"
-    >
-      <sourcepath>
-        <pathelement location="src"/>
-      </sourcepath>
-      <classpath>
-        <fileset dir="${nbroot}/openide/netbeans/lib">
-          <include name="openide*.jar" />
-        </fileset>
-      </classpath>
-      <link href="${jdk-docs-location}"
-            offline="true"
-            packagelistLoc="${nbroot}/openide/api/doc"
-      />
-      <link href="${openide-docs-location}"
-            offline="true"
-            packagelistLoc="${openide.package-list.loc}"
-      />
-    </javadoc>
-    <zip zipfile="LexerAPIs.zip" basedir="LexerAPIs"/>
-  </target>
-
 
 </project>
 
