IN=13623 add depency on ejb20.jar; add new j2ee type queries; add ManagedObject; add jsr77 test plugin

--- a/j2eeserver/src/org/netbeans/modules/j2ee/deployment/impl/ui/Bundle.properties
+++ b/j2eeserver/src/org/netbeans/modules/j2ee/deployment/impl/ui/Bundle.properties
@@ -118,4 +118,8 @@ LBL_Close_When_Finished_Mnemonic=A
 
 LBL_Resources=Resources
 
-LBL_DeployedObjects=Deployed Objects
+LBL_DeployedComponents=Deployed Components
+
+MSG_InvalidEntry=Invalid entry value
+
+MSG_UnsupportedParamType=MBeanOperation {0} has unsupported parameter types.
