--- a/j2eeserver/src/org/netbeans/modules/j2ee/deployment/impl/ui/actions/Bundle.properties
+++ b/j2eeserver/src/org/netbeans/modules/j2ee/deployment/impl/ui/actions/Bundle.properties
@@ -37,3 +37,5 @@ MSG_Default_Targets_Set=Default target(s) set:  {0} - {1}
 LBL_Add_Server_Instance=Add new server instance using Url...
 
 MSG_InvalidEntry=Invalid input values:
+
+LBL_Invoke=Invoke
