Bugfix #33546: Added support to be able to set global font size using bundle key.

--- a/o.n.core/src/org/netbeans/core/Bundle.properties
+++ b/o.n.core/src/org/netbeans/core/Bundle.properties
@@ -49,6 +49,9 @@ SPLASH_HEIGHT=300
 #NOI18N
 SplashShowProgressBar=true
 
+#33546: Be able to set global font size using bundle key
+CTL_globalFontSize=
+
 # x, y, w, h
 #NOI18N
 SplashRunningTextBounds=84, 138, 306, 20
