Various fixes that removes use of xwininfo and set default parameters to -remote openURL()

--- a/extbrowser/src/org/netbeans/modules/extbrowser/Bundle.properties
+++ b/extbrowser/src/org/netbeans/modules/extbrowser/Bundle.properties
@@ -6,7 +6,7 @@
 # http://www.sun.com/
 # 
 # The Original Code is NetBeans. The Initial Developer of the Original
-# Code is Sun Microsystems, Inc. Portions Copyright 1997-2001 Sun
+# Code is Sun Microsystems, Inc. Portions Copyright 1997-2003 Sun
 # Microsystems, Inc. All Rights Reserved.
 
 # module information
@@ -16,9 +16,10 @@ OpenIDE-Module-Long-Description=The External Browser module enables the integrat
 OpenIDE-Module-Short-Description=Enables integration of external web browsers with the IDE.
 
 # UnixBrowserImpl
+# {0} browser process
 MSG_Running_command=Running command {0}
-MSG_Cant_run_netscape=Cannot execute {0} and create new browser window. Check that a valid external browser property is set.  In the Options window, expand IDE Configuration.  Then expand Server and External Tool Settings and select Web Browsers.
-MSG_look_for_win=Looking for created window
+# {0} browser process
+MSG_Cant_run_netscape=Cannot execute {0}. Check that a valid external browser property is set.  In the Options window, expand IDE Configuration.  Then expand Server and External Tool Settings and select Web Browsers.
  
 # NbDdeBrowserImpl
 MSG_startingBrowser=Starting browser...
@@ -62,8 +63,6 @@ ERR_cant_activate_browser=Error: Cannot activate browser
 #UnixWebBrowser
 CTL_UnixBrowserName=External Browser (UNIX)
 HINT_UnixBrowserName=An HTML browser, such as Netscape Navigator, that runs on UNIX-based platforms.
-MSG_UnixBrowserHint=\
-    {params} = set of special parameters to activate the browser window with requested URL\n\
 
 #WinWebBrowser
 CTL_WinBrowserName=External Browser (Windows)
