--- a/nbbuild/build.xml
+++ b/nbbuild/build.xml
@@ -986,8 +986,13 @@ the ${netbeans.dest}/bin/ directory.
     <echo>WARNING - the nozip-check target is deprecated. Use all-nozip instead.</echo>
   </target>
 
-  <target name="tryme" depends="init,maybe-build-nozip"
-          description="Try running the IDE interactively (build it first if needed).">
+  <target name="tryme" depends="tryme-debug,tryme-run"
+          description="Try running the IDE interactively (build it first if needed).
+It is possible to use -Ddebug.port=3234 -Ddebug.pause=y to start the system in debug mode" 
+   />
+          
+          
+  <target name="tryme-run" depends="init,maybe-build-nozip" unless="debug.port" >
     <exec os="Windows NT Windows 95 Windows 98 Windows 2000 Windows XP" executable="${netbeans.dest.abs}/bin/runide.exe" failonerror="yes">
       <arg value="-jdkhome"/>
       <arg file="${jdkhome}"/>
@@ -1002,6 +1007,28 @@ the ${netbeans.dest}/bin/ directory.
       <arg value="-userdir"/>
       <arg file="${test.user.dir}"/>
       <arg line="${tryme.args}"/>
+    </exec>
+  </target>
+  
+  <target name="tryme-debug" depends="init,maybe-build-nozip" if="debug.port" >
+    <property name="debug.pause" value="n" />
+  
+    <exec os="Windows NT Windows 95 Windows 98 Windows 2000 Windows XP" executable="${netbeans.dest.abs}/bin/runide.exe" failonerror="yes">
+      <arg value="-jdkhome"/>
+      <arg file="${jdkhome}"/>
+      <arg value="-userdir"/>
+      <arg file="${test.user.dir}"/>
+      <arg line="${tryme.args}"/>
+      <arg line="-J-Xdebug -J-Xnoagent -J-Xrunjdwp:transport=dt_socket,suspend=${debug.pause},server=y,address=${debug.port}" />
+    </exec>
+    <exec os="Linux SunOS Solaris Mac OS X" dir="." executable="sh" failonerror="yes">
+      <arg value="${netbeans.dest}/bin/runide.sh"/>
+      <arg value="-jdkhome"/>
+      <arg file="${jdkhome}"/>
+      <arg value="-userdir"/>
+      <arg file="${test.user.dir}"/>
+      <arg line="${tryme.args}"/>
+      <arg line="-J-Xdebug -J-Xnoagent -J-Xrunjdwp:transport=dt_socket,suspend=${debug.pause},server=y,address=${debug.port}" />
     </exec>
   </target>
 
